finished creating basic styles, and styles for responsive layout

--- a/dev-assets/01-settings/_variables.scss
+++ b/dev-assets/01-settings/_variables.scss
@@ -24,7 +24,7 @@ $large-line-height: 1.8;
 $grid-base:10px;
 $gutter: $grid-base * 1.5;
 //Zaokrąglenie
-$border-radius: $grid-base *.5;
+$border-radius: $grid-base * 1.5;
 //Breakpointy
 $bp-medium: '800px';
 $bp-large: '1200px';
