--- a/dev-assets/05-objects/_container.scss
+++ b/dev-assets/05-objects/_container.scss
@@ -1,12 +1,14 @@
 .o-container {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: $gutter;
+    padding-right: $gutter;
     width: 100%;
+
     @include medium-up {
         max-width: 740px;
     }
+
     @include large-up {
         max-width: 1140px;
     }
