--- a/dev-assets/06-components/_btn.scss
+++ b/dev-assets/06-components/_btn.scss
@@ -9,7 +9,7 @@
     text-align: center;
     text-transform: uppercase;
     transition: all .25s ease-in-out;
-    width: 220px;
+    width: $grid-base * 22;
     &:hover {
         text-decoration: none;
     }
@@ -17,7 +17,7 @@
         background-color: $blue-light;
         color: $blue-text;
         &:hover {
-            background-color: darken($blue-light, $amount: 15%);
+            background-color: darken($blue-light, 15%);
             color: $white;
         }
     }
@@ -25,7 +25,7 @@
         background-color: $green;
         color: $white;
         &:hover {
-            background-color: darken($green, $amount: 15%);
+            background-color: darken($green, 15%);
             color: $white;
         }
     }
@@ -33,7 +33,7 @@
         background-color: $blue-dark;
         color: $white;
         &:hover {
-            background-color: darken($blue-dark, $amount: 15%);
+            background-color: darken($blue-dark, 15%);
             color: $white;
         }
     }
@@ -41,7 +41,7 @@
         background-color: $white;
         color: $blue-text;
         &:hover {
-            background-color: darken($white, $amount: 15%);
+            background-color: darken($white, 15%);
             color: $blue-text;
         }
     }
@@ -50,8 +50,8 @@
         border: 2px solid $white;
         color: $white;
         &:hover {
-            color: darken($white, $amount: 15%);
-            border: 2px solid darken($white, $amount: 15%);
+            color: darken($white, 15%);
+            border: 2px solid darken($white, 15%);
         }
     }
 }
