--- a/dev-assets/style.css
+++ b/dev-assets/style.css
@@ -358,6 +358,45 @@ a:hover {
   }
 }
 
+.t-about-us {
+  padding-bottom: 60px;
+  padding-top: 70px;
+}
+
+.t-about-us__left {
+  margin-bottom: 40px;
+}
+
+@media (min-width: 800px) {
+  .t-about-us__left {
+    margin-bottom: 0;
+  }
+}
+
+.t-about-us__right {
+  text-align: center;
+}
+
+@media (min-width: 800px) {
+  .t-about-us__right {
+    padding-right: 30px;
+    text-align: right;
+  }
+}
+
+.t-about-us__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.t-about-us__btn {
+  margin-bottom: 30px;
+  margin-right: 25px;
+}
+
 .t-site-header {
   background: url("../images/header-tlo.jpg") 0 0 no-repeat;
 }
