finished creatiing section with localization

--- a/dev-assets/07-templates/_templates.scss
+++ b/dev-assets/07-templates/_templates.scss
@@ -1,4 +1,5 @@
 @import '_about-us.scss';
 @import '_assets.scss';
 @import '_blog.scss';
+@import '_clinic-localization.scss';
 @import '_site-header.scss';
