--- a/dev-assets/07-templates/_blog.scss
+++ b/dev-assets/07-templates/_blog.scss
@@ -1,4 +1,22 @@
 .t-posts-list {
+    background-color: $gray-light;
+    padding-top: $grid-base * 4;
+    position: relative;
+    @include large-up {
+        height: 380px;
+    }
+    &__content {
+        padding-bottom: $grid-base * 4;
+        @include large-up {
+            background-color: $gray-light;
+            clip-path: ellipse(70% 450px at 50% -10px);
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: $grid-base * 8;
+            z-index: 1000;
+        }
+    }
     &__item {
         margin-bottom: $grid-base * 4;
         @include large-up {
