finished basic website

--- a/dev-assets/07-templates/_templates.scss
+++ b/dev-assets/07-templates/_templates.scss
@@ -2,4 +2,5 @@
 @import '_assets.scss';
 @import '_blog.scss';
 @import '_clinic-localization.scss';
+@import '_site-footer.scss';
 @import '_site-header.scss';
